# ChangeLog for sci-libs/candystore
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  13 Nov 2008; Oliver Borm (boroli) <oli.borm@web.de>
  +candystore-0.0.2.ebuild, +metadata.xml:
  New ebuild for bug 246611, thanks to scarabeus
