@@ -1,4 +1,4 @@
 DIST candystore-0.0.2.zip 408569 RMD160 692abb583b34a6e4fa20b1f257e5a2d4fd564901 SHA1 5fdb5458206e7586b68db23731d413047f3323ae SHA256 653df0a15fb9e2a38061928f4ab4d18521b81e78f061e006e7fa442edadcc243
-EBUILD candystore-0.0.2.ebuild 699 RMD160 b0e8dcd8a203696a342dfc8feee44c4e0d199625 SHA1 2a071f3b98f1faeb9b7a0b127c6154f074513708 SHA256 f094904a2b444e0fc5568da7e38d825d06ef5cb83aee8eb5ece1088c07232282
-MISC ChangeLog 267 RMD160 893ae5a8dfa6873feed7f93137bfc162c7cb8cf8 SHA1 fa5e419a055fd39be5f87a44563440925ce206d1 SHA256 ba9703af6665c1ce312af86003cf60f9ed83508a6c2f5a697da4ea04fb28d8d6
+EBUILD candystore-0.0.2.ebuild 752 RMD160 1375258f53d81ad02168186c25950f642c0e6b7e SHA1 ed6f8a55131ddcea52762e82b44d9bc6321e32a6 SHA256 8f19788561f04eb3332e3f59bcc02d20b605be7f2efec279a9c1602fe1396ebf
+MISC ChangeLog 375 RMD160 22e3473b0cc61d021dfdb0193a53a3276e4b06a6 SHA1 8ac407aeb9a9e9309b02ffcec022a3ba05b23573 SHA256 da637fdc62ea52738dac18eb5bae5a0960922b605aa53fc37de4c42391ee291b
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
